--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@ attribute vec4 vPosition;
 varying vec4 fcolor;
 uniform float theta;
 uniform mat4 viewMatrix;
-void
-main()
+vec4 deal(){
+	return vec4(vPosition.x+0.8,vPosition.y+0.8,vPosition.z+0.8,1.0);
+}
+void main()
 {
 	gl_Position=vPosition*viewMatrix;
 	gl_PointSize=1.0;
-	fcolor=vec4((0.5+vPosition.xyz),1.0);
+	fcolor=deal();
 	
 }
 </script>
@@ -34,7 +36,7 @@ main()
 
 <script type="text/javascript">
 function dealChange(){
-	points=[];
+	points=[];indices=[];
 	step = document.getElementById( "step" ).value;
 	step = parseInt(step);
 	document.getElementById( "stepv" ).innerText = step;
@@ -56,7 +58,7 @@ Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 <br></br>
 片元大小
-<input id="step" type="range" min="5" max="20" step="1" value="5" onchange="dealChange()" />
+<input id="step" type="range" min="1" max="30" step="1" value="5" onchange="dealChange()" />
 <span id="stepv">5</span>
 <br></br>
 X旋转
