--- a/index.html
+++ b/index.html
@@ -4,42 +4,56 @@
 <script type="text/javascript" src="./Common/MV.js"></script>
 <script type="text/javascript" src="./Common/webgl-utils.js"></script>
 <script type="text/javascript" src="./Common/initShaders.js"></script>
-<script type="text/javascript" src="./Class/triangle.js"></script>
+<script type="text/javascript" src="./Class/gl.js"></script>
 <script id="vertex-shader" type="x-shader/x-vertex">
 attribute vec4 vPosition;
+attribute vec4 vcolor;
 varying vec4 fcolor;
 uniform float theta;
 uniform mat4 viewMatrix;
-vec4 deal(){
-	return vec4(vPosition.x+0.8,vPosition.y+0.8,vPosition.z+0.8,1.0);
-}
-void main()
-{
-	gl_Position=vPosition*viewMatrix;
-	gl_PointSize=1.0;
-	fcolor=deal();
-	
+varying vec3 v_Normal;
+attribute vec3 a_Normal;
+void main() {
+gl_Position = viewMatrix * vPosition;
+fcolor = vcolor;
+v_Normal = a_Normal;
 }
 </script>
 
 <script id="fragment-shader" type="x-shader/x-fragment">
 precision mediump float;
+uniform vec3 u_DiffuseLight;
+uniform vec3 u_LightDirection;
+uniform vec3 u_AmbientLight;
 varying vec4 fcolor;
-void
-main()
-{
-    gl_FragColor = fcolor;
-	
+varying vec3 v_Normal;
+void main() {
+  //对法向量归一化
+vec3 normal = normalize(v_Normal.xyz);
+  //计算光线向量与法向量的点积
+float nDotL = max(dot(u_LightDirection, normal), 0.0);
+  //计算漫发射光的颜色 
+vec3 diffuse = u_DiffuseLight * fcolor.rgb * nDotL;
+  //计算环境光的颜色
+vec3 ambient = u_AmbientLight * fcolor.rgb;
+gl_FragColor = vec4(diffuse+ambient, fcolor.a);
 }
 </script>
 
 
 <script type="text/javascript">
 function dealChange(){
-	points=[];indices=[];
-	step = document.getElementById( "step" ).value;
-	step = parseInt(step);
-	document.getElementById( "stepv" ).innerText = step;
+	points=[];indices=[];colors=[];normals=[];
+	Radius = document.getElementById( "step" ).value;
+	Radius = parseInt(Radius);
+	document.getElementById( "stepv" ).innerText = Radius;
+	Radius=Radius*1.0/10;
+	Rv = 1.0*parseInt(document.getElementById( "Rvalue" ).value)/255;
+	Gv = 1.0*parseInt(document.getElementById( "Gvalue" ).value)/255;
+	Bv = 1.0*parseInt(document.getElementById( "Bvalue" ).value)/255;
+	document.getElementById( "Rvalue1" ).innerText=document.getElementById( "Rvalue" ).value;
+	document.getElementById( "Gvalue1" ).innerText=document.getElementById( "Gvalue" ).value;
+	document.getElementById( "Bvalue1" ).innerText=document.getElementById( "Bvalue" ).value;
 	
 	deal();
 	gl.bufferData( gl.ARRAY_BUFFER, flatten(points), gl.STATIC_DRAW );
@@ -57,8 +71,8 @@ function dealChange(){
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 <br></br>
-片元大小
-<input id="step" type="range" min="1" max="30" step="1" value="5" onchange="dealChange()" />
+球半径
+<input id="step" type="range" min="1" max="9" step="1" value="5" onchange="dealChange()" />
 <span id="stepv">5</span>
 <br></br>
 X旋转
@@ -72,5 +86,17 @@ Y旋转
 Z旋转
 <input id="Zdegree" type="range" min="0" max="360" step="0.1" value="0" onchange="dealChange()" />
 <span id="Zdegreev">0</span>
+<br></br>
+R色值
+<input id="Rvalue" type="range" min="0" max="255" step="1" value="255" onchange="dealChange()" />
+<span id="Rvalue1">255</span>
+<br></br>
+G色值
+<input id="Gvalue" type="range" min="0" max="255" step="1" value="0" onchange="dealChange()" />
+<span id="Gvalue1">0</span>
+<br></br>
+B色值
+<input id="Bvalue" type="range" min="0" max="255" step="1" value="0" onchange="dealChange()" />
+<span id="Bvalue1">0</span>
 </body>
 </html>
